@@ -1098,6 +1098,106 @@ static int	evaluate_NODATA(char *value, DB_ITEM *item, int parameter, time_t now
 
 /******************************************************************************
  *                                                                            *
+ * Function: evaluate_ABSCHANGE                                               *
+ *                                                                            *
+ * Purpose: evaluate function 'abschange' for the item                        *
+ *                                                                            *
+ * Parameters: item - item (performance metric)                               *
+ *             parameter - number of seconds                                  *
+ *                                                                            *
+ * Return value: SUCCEED - evaluated succesfully, result is stored in 'value' *
+ *               FAIL - failed to evaluate function                           *
+ *                                                                            *
+ * Author: Alexei Vladishev                                                   *
+ *                                                                            *
+ * Comments:                                                                  *
+ *                                                                            *
+ ******************************************************************************/
+static int	evaluate_ABSCHANGE(char *value, DB_ITEM *item, const char *parameter, time_t now)
+{
+	zabbix_log(LOG_LEVEL_DEBUG, "In evaluate_ABSCHANGE()");
+
+	if (item->lastvalue_null == 1 || item->prevvalue_null == 1)
+		return FAIL;
+
+	switch (item->value_type) {
+		case ITEM_VALUE_TYPE_FLOAT:
+			zbx_snprintf(value, MAX_STRING_LEN, ZBX_FS_DBL,
+					(double)abs(item->lastvalue_dbl - item->prevvalue_dbl));
+			del_zeroes(value);
+			break;
+		case ITEM_VALUE_TYPE_UINT64:
+			/* To avoid overflow */
+			if (item->lastvalue_uint64 >= item->prevvalue_uint64)
+				zbx_snprintf(value, MAX_STRING_LEN, ZBX_FS_UI64,
+						item->lastvalue_uint64 - item->prevvalue_uint64);
+			else
+				zbx_snprintf(value, MAX_STRING_LEN, ZBX_FS_UI64,
+						item->prevvalue_uint64 - item->lastvalue_uint64);
+			break;
+		default:
+			if (0 == strcmp(item->lastvalue_str, item->prevvalue_str))
+				zbx_snprintf(value, MAX_STRING_LEN, "%d", 0);
+			else
+				zbx_snprintf(value, MAX_STRING_LEN, "%d", 1);
+			break;
+	}
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of evaluate_ABSCHANGE()");
+}
+
+/******************************************************************************
+ *                                                                            *
+ * Function: evaluate_CHANGE                                                  *
+ *                                                                            *
+ * Purpose: evaluate function 'abschange' for the item                        *
+ *                                                                            *
+ * Parameters: item - item (performance metric)                               *
+ *             parameter - number of seconds                                  *
+ *                                                                            *
+ * Return value: SUCCEED - evaluated succesfully, result is stored in 'value' *
+ *               FAIL - failed to evaluate function                           *
+ *                                                                            *
+ * Author: Alexei Vladishev                                                   *
+ *                                                                            *
+ * Comments:                                                                  *
+ *                                                                            *
+ ******************************************************************************/
+static int	evaluate_CHANGE(char *value, DB_ITEM *item, const char *parameter, time_t now)
+{
+	zabbix_log(LOG_LEVEL_DEBUG, "In evaluate_CHANGE()");
+
+	if (item->lastvalue_null == 1 || item->prevvalue_null == 1)
+		return FAIL;
+
+	switch (item->value_type) {
+		case ITEM_VALUE_TYPE_FLOAT:
+			zbx_snprintf(value, MAX_STRING_LEN, ZBX_FS_DBL,
+					item->lastvalue_dbl - item->prevvalue_dbl);
+			del_zeroes(value);
+			break;
+		case ITEM_VALUE_TYPE_UINT64:
+			/* To avoid overflow */
+			if (item->lastvalue_uint64 >= item->prevvalue_uint64)
+				zbx_snprintf(value, MAX_STRING_LEN, ZBX_FS_UI64,
+						item->lastvalue_uint64 - item->prevvalue_uint64);
+			else
+				zbx_snprintf(value, MAX_STRING_LEN, "-" ZBX_FS_UI64,
+						item->prevvalue_uint64 - item->lastvalue_uint64);
+			break;
+		default:
+			if (0 == strcmp(item->lastvalue_str, item->prevvalue_str))
+				zbx_snprintf(value, MAX_STRING_LEN, "%d", 0);
+			else
+				zbx_snprintf(value, MAX_STRING_LEN, "%d", 1);
+			break;
+	}
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of evaluate_CHANGE()");
+}
+
+/******************************************************************************
+ *                                                                            *
  * Function: evaluate_STR                                                     *
  *                                                                            *
  * Purpose: evaluate function 'str' for the item                              *
@@ -1340,83 +1440,11 @@ int evaluate_function(char *value, DB_ITEM *item, char *function, char *paramete
 	}
 	else if (0 == strcmp(function, "abschange"))
 	{
-		if((item->lastvalue_null==1)||(item->prevvalue_null==1))
-		{
-			ret = FAIL;
-		}
-		else
-		{
-			switch (item->value_type) {
-				case ITEM_VALUE_TYPE_FLOAT:
-					zbx_snprintf(value,MAX_STRING_LEN,ZBX_FS_DBL,
-						(double)abs(item->lastvalue_dbl-item->prevvalue_dbl));
-					del_zeroes(value);
-					break;
-				case ITEM_VALUE_TYPE_UINT64:
-					/* To avoid overflow */
-					if(item->lastvalue_uint64>=item->prevvalue_uint64)
-					{
-						zbx_snprintf(value,MAX_STRING_LEN,ZBX_FS_UI64,
-							labs(item->lastvalue_uint64-item->prevvalue_uint64));
-					}
-					else
-					{
-						zbx_snprintf(value,MAX_STRING_LEN,"-" ZBX_FS_UI64,
-							labs(item->prevvalue_uint64 - item->lastvalue_uint64));
-					}
-					break;
-				default:
-					if(strcmp(item->lastvalue_str, item->prevvalue_str) == 0)
-					{
-						strcpy(value,"0");
-					}
-					else
-					{
-						strcpy(value,"1");
-					}
-					break;
-			}
-		}
+		ret = evaluate_ABSCHANGE(value, item, parameter, now);
 	}
 	else if (0 == strcmp(function, "change"))
 	{
-		if((item->lastvalue_null==1)||(item->prevvalue_null==1))
-		{
-			ret = FAIL;
-		}
-		else
-		{
-			switch (item->value_type) {
-				case ITEM_VALUE_TYPE_FLOAT:
-					zbx_snprintf(value,MAX_STRING_LEN,ZBX_FS_DBL,
-						item->lastvalue_dbl-item->prevvalue_dbl);
-					del_zeroes(value);
-					break;
-				case ITEM_VALUE_TYPE_UINT64:
-					/* To avoid overflow */
-					if(item->lastvalue_uint64>=item->prevvalue_uint64)
-					{
-						zbx_snprintf(value,MAX_STRING_LEN,ZBX_FS_UI64,
-							item->lastvalue_uint64-item->prevvalue_uint64);
-					}
-					else
-					{
-						zbx_snprintf(value,MAX_STRING_LEN,"-" ZBX_FS_UI64,
-							item->prevvalue_uint64 - item->lastvalue_uint64);
-					}
-					break;
-				default:
-					if(strcmp(item->lastvalue_str, item->prevvalue_str) == 0)
-					{
-						strcpy(value,"0");
-					}
-					else
-					{
-						strcpy(value,"1");
-					}
-					break;
-			}
-		}
+		ret = evaluate_CHANGE(value, item, parameter, now);
 	}
 	else if (0 == strcmp(function, "diff"))
 	{
