@@ -1,5 +1,6 @@
 Changes for 1.6.2
 
+ - [ZBX-623] fixed incorrect processing of function abschange() for integers(Sasha)
  - [ZBX-622] fixed broked autocreation of SQLite database (Alexei)
  - [ZBX-621] fixed bad performance of the graph related screen due to missing index (Alexei)
  - [ZBX-620] fixed jstree error in IT Services (Artem)
